HW10: intro work from Lesson_10(XML, JSON)